istio-ingress/manifest-new-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kube-canary
  labels:
    app: hello-kube
    version: v2
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kube
      version: v2
  template:
    metadata:
      labels:
        app: hello-kube
        version: v2
    spec:
      containers:
      - name: hello-kube
        image: hello-kube:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: dev-service-v2
  labels:
    version: v2
  namespace: dev
spec:
  type: LoadBalancer
  ports:
  -
    port: 80
    targetPort: 8080
  selector:
    app: hello-kube
    version: v2
