istio-ingress/manifest-istio-virtualservice-50-50.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-service-ingress
  namespace: dev
spec:
  hosts: 
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: dev-service
      weight: 50
    - destination:
        host: dev-service-v2
      weight: 50
